--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Capitaview_Page_1"
         tools:targetApi="31">
         <activity
+            android:name=".MainDashboard"
+            android:exported="false" />
+        <activity
             android:name=".Registration_activity"
             android:exported="false" />
         <activity
