--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Capitaview_Page_1"
         tools:targetApi="31">
         <activity
+            android:name=".ViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChartsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainDashboard"
             android:exported="false" />
         <activity
