--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Capitaview_Page_1"
         tools:targetApi="31">
         <activity
+            android:name=".addPortfolioEntry"
+            android:exported="false" />
+        <activity
             android:name=".Articles"
             android:exported="false" />
         <activity
